SPRING MODULES CHANGELOG
========================
http://springmodules.dev.java.net

Changes in version 0.6 (in progress)
------------------------------------

Package org.springmodules.lucene
* Upgraded Lucene to 2.0.0
* Fixed AbstractIndexFactory to work with Lucene 2.0.0 [JIRA MOD-141]. Thanks eearley.

Changes in version 0.5 (in progress)
------------------------------------
Package org.springmodules.cache
* Patched the module to work with Spring post 2.0-m3. Many thanks to Craig Walls for submitting the patch.

Package org.springmodules.jcr
* Updated docs and the sample [JIRA MOD-160]

Package org.springmodules.jcr.jackrabbit
* Added TransientRepositoryFactoryBean

Package org.springmodules.workflow.jbpm31
* Updated docs regarding ProcessDefinitionFB [JIRA MOD-135]

Package org.springmodules.workflow.osworkflow
* Added reference documentation [JIRA MOD-158]
* Upgraded Acegi to 1.0.1 version [JIRA MOD-65]. Thanks go to Stefan Kleineikenscheidt for helping out.

Package org.springmodules.validation.valang.parser
* Fixed the valang.jj to support direct list/array elements using the BeanWrapper notation (e.g. tags[0])

Package org.springmodules.xt
* New top-level module added. Spring XT (http://springxt.sourceforge.net) is now part of the Spring Modules project.

Changes in version 0.4
------------------------------------

Added docbook documentation for validation module

Package org.springmodules.javaspaces
* New Javaspaces module
* Added usage documentation

Package org.springmodules.jbpm30
* Updated jBPM to 3.0.3
* Renamed JbpmHandler to JbpmHandlerProxy (and changed beanName to targetBean) [JIRA MOD-114]

Package org.springmodules.jbpm31
* Updated jBPM to 3.1.1
* Renamed JbpmHandler to JbpmHandlerProxy (and changed beanName to targetBean) [JIRA MOD-114]
* JbpmTemplate will use jBPM context sessionFactory if no hibernateTemplate is set [JIRA MOD-138]
* Added usage documentation

Package org.springmodules.jcr
* Updated Jackrabbit to 1.0.1
