@@ -18,7 +18,7 @@
 
 
   <dependencies>
-    <dependency org="flux" name="flux-for-spring" rev="7.1"/>
+    <dependency org="flux" name="flux-for-spring" rev="7.1.1"/>
     
     <dependency org="springframework" name="springframework" rev="1.2.7">
       <artifact name="spring-core" type="jar" conf="global" />
@@ -27,6 +27,7 @@
 
 
     <!-- test time only dependencies -->
+    <dependency org="junit" name="junit" rev="3.8.1" conf="test->default" />
     <dependency org="apache" name="commons-logging" rev="1.0.4" conf="test->default"/>
     <dependency org="hsqldb" name="hsqldb" rev="1.7.1" conf="test->default"/>
   </dependencies>
